fix spacing of sidepanel close button

--- a/src/components/SidePanel/SidePanel.less
+++ b/src/components/SidePanel/SidePanel.less
@@ -44,6 +44,7 @@
 				
 				.@{prefix}-SidePanel-header-content {
 					flex: 1;
+					min-height: 32px;
 					height: 100%;
 				}
 
